# PackratParsing

./: CMakeLists.txt
src/: main.cpp
src/parser/: ChoiceParser.cpp  ChoiceParser.h  LiteralParser.cpp  LiteralParser.h  Parser.cpp  Parser.h  SequenceParser.cpp  SequenceParser.h
